unpackaged/main/default/objects/Block_Code__c/Block_Code__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Block Code</label>
</CustomObject>