unpackaged/main/default/objects/Block_Code__c/fields/Stop_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Stop_Accruals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Accruals</label>
    <type>Checkbox</type>
</CustomField>