unpackaged/main/default/objects/Block_Code__c/fields/Suspend_Charges__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Charges</label>
    <type>Checkbox</type>
</CustomField>