unpackaged/main/default/objects/Block_Code__c/fields/Suspend_Communication__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Communication</label>
    <type>Checkbox</type>
</CustomField>