unpackaged/main/default/objects/Block_Code__c/fields/Suspend_Disbursals__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Disbursals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Disbursals</label>
    <type>Checkbox</type>
</CustomField>